update open-api-validator
